  table PK if not applicable, i.e. for a UNION.  checking for DISTINCT, GROUP BY
  (other places that rowid is invalid) still a TODO.  allows polymorphic mappings
  to function, [ticket:436]
  - sequences on a non-pk column will properly fire off on INSERT
  - added PrefetchingResultProxy support to pre-fetch LOB columns when they are 
  known to be present, fixes [ticket:435]
- mysql:
  - fix to reflection on older DB's that might return array() type for 
  "show variables like" statements
- postgres:
  - better reflection of sequences for alternate-schema Tables [ticket:442]
  - sequences on a non-pk column will properly fire off on INSERT
  - added PGInterval type [ticket:460], PGInet type [ticket:444]
- ext:
  - added distinct() method to SelectResults.  generally should only make a difference
  when using count().
  - added options() method to SelectResults, equivalent to query.options() [ticket:472]
  - added optional __table_opts__ dictionary to ActiveMapper, will send kw options to 
  Table objects [ticket:462]
- mssql:
  - better support for NVARCHAR types added [ticket:298]
  - fix for commit logic on pymssql
  - fix for query.get() with schema [ticket:456]
  - fix for non-integer relationships [ticket:473]
  - DB-API module now selectable at run-time [ticket:419]
  - preliminary support for pyodbc (Yay!) [ticket:419]
  - now passes many more unit tests [tickets:422, 481, 415]
  - better unittest compatibility with ANSI functions [ticket:479]
  - improved support for implicit sequence PK columns with auto-insert [ticket:415]
  - fix for blank password in adodbapi [ticket:371]
  - fixes to get unit tests working with pyodbc [ticket:481]

  
0.3.4
- general:
  - global "insure"->"ensure" change. in US english "insure" is actually
    largely interchangeable with "ensure" (so says the dictionary), so I'm not
    completely illiterate, but its definitely sub-optimal to "ensure" which is
    non-ambiguous.
- sql:
  - added "fetchmany()" support to ResultProxy